# snax

./: .gitmodules  BuildSnaX.bat  CMakeLists.txt  CMakePresets.json  GenerateSnaX.bat  LICENSE  README.md  Setup.bat  msvc.manifest
ChipDialogs/: CMakeLists.txt  ChipDialog.cpp  ChipDialog.h  ChipDialogManager.cpp  ChipDialogManager.h  DialogPage.cpp  DialogPage.h  Exports.h  FlowLayout.cpp  FlowLayout.h  NumberToQString.h  SimpleComboBoxDialogPage.cpp  SimpleComboBoxDialogPage.h  SimpleDialogPage.cpp  SimpleDialogPage.h  SimpleFormDialogPage.cpp  SimpleFormDialogPage.h  SimpleTreeWidgetDialogPage.cpp  SimpleTreeWidgetDialogPage.h  StandardComboBoxDialogPage.cpp  StandardComboBoxDialogPage.h  StandardDialogPage.cpp  StandardDialogPage.h  StandardFormDialogPage.cpp  StandardFormDialogPage.h  StandardFormDialogPage2.cpp  StandardFormDialogPage2.h  StandardListWidgetDialogPage.h  StandardTextEditDialogPage.h  StandardTreeWidgetDialogPage.cpp  StandardTreeWidgetDialogPage.h  stdafx.h
GraphicsChips/: 3DObject.cpp  3DObject.h  BackBuffer.cpp  BackBuffer.h  BufferLayout.cpp  BufferLayout.h  CMakeLists.txt  Compute.cpp  Compute.h  D3D12Formats.cpp  D3D12Formats.h  D3D12Include.h  D3D12RenderWindow.cpp  D3D12RenderWindow.h  D3D12RenderWindowManager.cpp  D3D12RenderWindowManager.h  D3DBlobUtil.cpp  D3DBlobUtil.h  D3DSaveLoadUtil.cpp  D3DSaveLoadUtil.h  D3DX12.h  DebugFont.h  DebugGeometry.cpp  DebugGeometry.h  DebugGeometry_hlsl.h  DescriptorHeapManager.cpp  DescriptorHeapManager.h  Exports.cpp  Exports.h  Font.cpp  Font.h  FontChip.cpp  FontChip.h  Geometry.cpp  Geometry.h  Graphics.cpp  Graphics.h  GraphicsBuffer.cpp  GraphicsBuffer.h  GraphicsCommand.cpp  (+64 more)
GraphicsChips_Dlg/: 3DObject_Dlg.cpp  3DObject_Dlg.h  BackBuffer_Dlg.cpp  BackBuffer_Dlg.h  CMakeLists.txt  CodeEditor.cpp  CodeEditor.h  D3DChips_Dlg.qrc  D3DWidget.cpp  D3DWidget.h  Exports.cpp  Exports.h  FontChip_Dlg.cpp  FontChip_Dlg.h  Geometry3DView.cpp  Geometry3DView.h  Geometry3DView.hlsl.h  Geometry_Dlg.cpp  Geometry_Dlg.h  Geometry_Dlg.ui  GraphicsBuffer_Dlg.cpp  GraphicsBuffer_Dlg.h  GraphicsCommand_Dlg.cpp  GraphicsCommand_Dlg.h  GraphicsMatrix_Dlg.cpp  GraphicsMatrix_Dlg.h  GraphicsResource_Dlg.cpp  GraphicsResource_Dlg.h  GraphicsResource_Dlg.ui  GraphicsState_Dlg.cpp  GraphicsState_Dlg.h  GraphicsState_Dlg2.ui  GraphicsValue_Dlg.cpp  GraphicsValue_Dlg.h  GraphicsVector_Dlg.cpp  GraphicsVector_Dlg.h  HBAOPlus_Dlg.cpp  HBAOPlus_Dlg.h  HLSLHighlighter.cpp  HLSLHighlighter.h  (+39 more)
M3DCore/: Allocator.h  AxisAlignedBox.cpp  AxisAlignedBox.h  Base64.cpp  Base64.h  CMakeLists.txt  ComPtr.h  Containers.h  CriticalSection.cpp  CriticalSection.h  DataBuffer.cpp  DataBuffer.h  DataBufferStream.cpp  DataBufferStream.h  DestructionObserver.cpp  DestructionObserver.h  Exports.h  Flags.h  Frustum.cpp  Frustum.h  GuidUtil.cpp  GuidUtil.h  HighPrecisionTimer.cpp  HighPrecisionTimer.h  MLocale.cpp  MLocale.h  MMath.h  MString.cpp  MString.h  MTypes.h  MagicEnum.h  MemoryManager.cpp  MemoryManager.h  NormalizedVector.cpp  NormalizedVector.h  Path.cpp  Path.h  PlatformDef.h  Scrambler.cpp  Scrambler.h  (+12 more)
M3DEngine/: Application.h  CMakeLists.txt  ChildPtr.h  Chip.cpp  Chip.h  ChipDef.cpp  ChipDef.h  ChipManager.cpp  ChipManager.h  Class.cpp  Class.h  ClassInstance.cpp  ClassInstance.h  ClassInstanceRef.cpp  ClassInstanceRef.h  ClassManager.cpp  ClassManager.h  Document.cpp  Document.h  DocumentBINLoader.cpp  DocumentBINLoader.h  DocumentBINSaver.cpp  DocumentBINSaver.h  DocumentFileTypes.cpp  DocumentFileTypes.h  DocumentJSONLoader.cpp  DocumentJSONLoader.h  DocumentJSONSaver.cpp  DocumentJSONSaver.h  DocumentLoader.cpp  DocumentLoader.h  DocumentManager.cpp  DocumentManager.h  DocumentSaveLoadUtil.cpp  DocumentSaveLoadUtil.h  DocumentSaver.cpp  DocumentSaver.h  DocumentTags.h  DocumentXMLLoader.cpp  DocumentXMLLoader.h  (+33 more)
M3DEngineExt/: CMakeLists.txt  ChDir.img.h  Chip.img.h  ChipBorder.img.h  ChipHalf.img.h  ClassDiagram.cpp  ClassDiagram.h  ClassDiagramView.cpp  ClassDiagramView.h  ClassExt.cpp  ClassExt.h  ClassRenderer2.cpp  ClassRenderer2.h  ClassRenderer2.hlsl.h  ClassRenderer2_9.cpp  ClassRenderer2_9.hlsl.h  ClassView.cpp  ClassView.h  Connectors.img.h  Constant.img.h  D3DInclude.h  DocumentExtLoader.cpp  DocumentExtLoader.h  DocumentExtSaver.cpp  DocumentExtSaver.h  EditorState.cpp  EditorState.h  Error.img.h  Folder.img.h  Font.cpp  Font.h  Frame.img.h  GraphicsDefines.cpp  GraphicsDefines.h  Images.h  Info.img.h  InfoBox.img.h  InfoCornerCh.img.h  InfoCornerCo.img.h  InputManager.cpp  (+23 more)
PhysXChips/: CMakeLists.txt  Exports.cpp  Exports.h  PhysX.h  PhysXActor.cpp  PhysXActor.h  PhysXArticulationBase.cpp  PhysXArticulationBase.h  PhysXArticulationJointBase.cpp  PhysXArticulationJointBase.h  PhysXArticulationJointRC.cpp  PhysXArticulationJointRC.h  PhysXArticulationLink.cpp  PhysXArticulationLink.h  PhysXArticulationRC.cpp  PhysXArticulationRC.h  PhysXCommand.cpp  PhysXCommand.h  PhysXConvexMesh.cpp  PhysXConvexMesh.h  PhysXD6Joint.cpp  PhysXD6Joint.h  PhysXDistanceJoint.cpp  PhysXDistanceJoint.h  PhysXFixedJoint.cpp  PhysXFixedJoint.h  PhysXJoint.cpp  PhysXJoint.h  PhysXMaterial.cpp  PhysXMaterial.h  PhysXMatrix.cpp  PhysXMatrix.h  PhysXPrismaticJoint.cpp  PhysXPrismaticJoint.h  PhysXRevoluteJoint.cpp  PhysXRevoluteJoint.h  PhysXRigidActor.cpp  PhysXRigidActor.h  PhysXRigidBody.cpp  PhysXRigidBody.h  (+24 more)
Primitives/: CMakeLists.txt  Exports.h  Primitives.cpp  Primitives.h  stdafx.cpp  stdafx.h  targetver.h  tgen.cpp  tgen.h
SnaXDeveloper/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  ActionManager.cpp  ActionManager.h  App.cpp  App.h  AppSignals.cpp  AppSignals.h  CMakeLists.txt  CallStackWidget.cpp  CallStackWidget.h  ChipMessagesWidget.cpp  ChipMessagesWidget.h  ClassDescriptionDialog.cpp  ClassDescriptionDialog.h  ClassDescriptionDialog.ui  ClassInstanceDialog.cpp  ClassInstanceDialog.h  ClassInstanceDialog.ui  Common.h  CustomDraggableTreeWidget.cpp  CustomDraggableTreeWidget.h  DXEditorWidget.cpp  DXEditorWidget.h  DocumentInfoCache.cpp  DocumentInfoCache.h  EditorCollection.cpp  EditorCollection.h  EditorContainer.cpp  (+92 more)
(+369 files in other folders)
